Moves public files to root for gh-pages

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<script src="/js/three.min.js"></script>
-<script src="/js/OrbitControls.js"></script>
-<script src="/js/PointerLockControls.js"></script>
-<script src="/js/main.js"></script>
+<script src="/js_public/three.min.js"></script>
+<script src="/js_public/OrbitControls.js"></script>
+<script src="/js_public/PointerLockControls.js"></script>
+<script src="/js_public/main.js"></script>
 </body>
 </html>
