Adds config to store paths, gives crates texture

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 
-<script src="js_public/three.min.js"></script>
-<script src="js_public/OrbitControls.js"></script>
-<script src="js_public/PointerLockControls.js"></script>
-<script src="js_public/main.js"></script>
+<script src="assets_public/js/three.min.js"></script>
+<script src="assets_public/js/OrbitControls.js"></script>
+<script src="assets_public/js/PointerLockControls.js"></script>
+<script src="assets_public/js/main.js"></script>
 </body>
 </html>
