--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
 </head>
 <body>
 
-<script src="assets_public/js/three.min.js"></script>
+<script src="assets_public/js/three-r73.min.js"></script>
+
 <script src="assets_public/js/OrbitControls.js"></script>
 <script src="assets_public/js/PointerLockControls.js"></script>
+
+<script src="assets_public/js/MD2Loader.js"></script>
+<script src="assets_public/js/MD2Character.js"></script>
+
 <script src="assets_public/js/main.js"></script>
 </body>
 </html>
