Adds stats, removes orbitcontrols

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
 
 <script src="assets_public/js/three-r73.min.js"></script>
-
-<script src="assets_public/js/OrbitControls.js"></script>
 <script src="assets_public/js/PointerLockControls.js"></script>
 
 <script src="assets_public/js/MD2Loader.js"></script>
 <script src="assets_public/js/MD2Character.js"></script>
+
+<script src="assets_public/js/stats-r14.min.js"></script>
 
 <script src="assets_public/js/main.js"></script>
 </body>
