Makes JSON "work"

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 </head>
 <body>
 
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
 <script src="assets_public/js/three-r73.min.js"></script>
 <script src="assets_public/js/PointerLockControls.js"></script>
 
+<script src="assets_public/js/MorphAnimMesh.js"></script>
 <script src="assets_public/js/MD2Loader.js"></script>
 <script src="assets_public/js/MD2Character.js"></script>
 
+<script src="assets_public/js/AnimatedMD2Model.js"></script>
 <script src="assets_public/js/stats-r14.min.js"></script>
 
 <script src="assets_public/js/main.js"></script>
