refactors code to es6

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
 <script src="assets_public/js/stats-r14.min.js"></script>
 
-<script src="assets_public/js/main.js"></script>
+<script src="assets_public/js/app.js"></script>
 </body>
 </html>
