adds aim collision

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 </head>
 <body>
 
+<div class="cursor"></div>
+
 <script src="assets_public/js/three-r73.min.js"></script>
 <script src="assets_public/js/PointerLockControls.js"></script>
 
